--- a/trap_scorekeeping/templates/trap_scorekeeping/ack_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/ack_entry.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="{% static 'trap_scorekeeping/favicon-96x96.png' %}">
     <title>User</title>
     <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'trap_scorekeeping/base.css' %}" rel="stylesheet">
+    <link href="{% static 'trap_scorekeeping/css/base.css' %}" rel="stylesheet">
   </head>
 
 <body>
@@ -32,6 +32,5 @@
   <script>window.jQuery || document.write('<script src="{% static 'trap_scorekeeping/js/jquery.min.js' %}"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="{% static 'trap_scorekeeping/js/bootstrap.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'trap_scorekeeping/site.js' %}"></script>
 </body>
 </html>
