--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -5,70 +5,43 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
 
   <title>Index</title>
-  <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'trap_scorekeeping/index2.css' %}" rel="stylesheet">
-  <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link href="{% static 'trap_scorekeeping/css/bootstrap-theme.min.css %}" rel="stylesheet">
-  <link href="{% static 'trap_scorekeeping/index2.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="{% static 'trap_scorekeeping/css/index.css' %}" rel="stylesheet">
+  <link href="{% static 'trap_scorekeeping/css/bootstrap-theme.min.css' %}" rel="stylesheet">
+  <link href="{% static 'trap_scorekeeping/css/theme.css' %}" rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- Fixed navbar -->
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Bootstrap theme</a>
+        <a class="navbar-brand" href="#">Trap Scorekeeper</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="{% url 'round_entry' %}">Enter New Round</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User Pages <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
+              {% for user in sidebar_users %}
+              <li><a href="{% url 'player_page' user.username %}">{{ user }}</a></li>
               <li role="separator" class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
+              {% endfor %}
             </ul>
           </li>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div>
     </div>
   </nav>
 
-  <div class="container theme-showcase" role="main">
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <h1>Theme example</h1>
-      <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
-    </div>
-  </div>
-
-
-  <div class="container">
-
-    <div class="starter-template">
+  <div class="container starter-template">
       <h2>Trap Scorekeeper</h2>
-      <div id="content">
         <div id="lists">
         <ul>
           <h4>recent games:</h4>
@@ -83,10 +56,7 @@
               <li> Hit Percentage: {{ hit_percent }}%</li>
               <li>Average Score: {{ average_score }}</li>
           </ul>
-          </div>
         </div>
-    </div>
-
   </div>
 
 
