--- a/trap_scorekeeping/templates/trap_scorekeeping/round_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/round_entry.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html>
+{% load staticfiles %}
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Round Entry</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{% static 'trap_scorekeeping/favicon-96x96.png' %}">
+
+    <title>Enter round:</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="{% static 'trap_scorekeeping/css/theme.css' %}" rel="stylesheet">
   </head>
+
   <body>
-    <form method="POST">
-      {% csrf_token %}
-      {{ score_form.as_p }}
-      {{ form.as_p }}
-    <input type='submit' value="Create Round" />
-    </form>
-  </body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="{% url 'index' %}">Trap Scorekeeper</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Enter New Round</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+
+    <div class="container">
+      <div class="starter-template">
+        <form method="POST">
+          {% csrf_token %}
+          {{ score_form.as_p }}
+          {{ form.as_p }}
+        <input type="submit" value="Create Round" />
+        </form>
+      </div>
+
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="{% static 'trap_scorekeeping/js/jquery.min.js' %}"><\/script>')</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script src="{% static 'trap_scorekeeping/js/bootstrap.min.js' %}"></script>
+    </body>
 </html>
