--- a/trap_scorekeeping/static/trap_scorekeeping/css/index.css
+++ b/trap_scorekeeping/static/trap_scorekeeping/css/index.css
@@ -2,6 +2,10 @@ body {
   padding-top: 5rem;
 }
 
+.liquidFillGaugeText {
+  font-family: Helvetica;
+  font-weight: bold; }
+
 .starter-template {
   padding: 3rem 1.5rem;
   text-align: left;
@@ -12,7 +16,7 @@ h2{
 }
 #content {
   display: flex;
-  justify-content: flex-start;;
+  justify-content: space-around;
   margin-left: 20px;
   margin-right: 20px;
 }
