--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -13,6 +13,7 @@
   <link href="{% static 'trap_scorekeeping/css/index.css' %}" rel="stylesheet">
   <link href="{% static 'trap_scorekeeping/css/bootstrap-theme.min.css' %}" rel="stylesheet">
   <link href="{% static 'trap_scorekeeping/css/theme.css' %}" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{% static 'trap_scorekeeping/css/asterstyle.css' %}">
 </head>
 
 <body>
@@ -57,6 +58,16 @@
               <li>Average Score: {{ average_score }}</li>
           </ul>
         </div>
+
+  </div>
+  <div id="aster">
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <script>
+    var csv_data = "{% static 'trap_scorekeeping/test.csv' %}"
+    </script>
+    <script src="{% static 'trap_scorekeeping/js/draw.js' %}" ></script>
+
   </div>
 
 
