--- a/trap_scorekeeping/templates/trap_scorekeeping/index.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/index.html
@@ -64,7 +64,7 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script>
-    var csv_data = "{% static 'trap_scorekeeping/test.csv' %}"
+    var csv_data = "{% static 'trap_scorekeeping/stephenaster.csv' %}"
     </script>
     <script src="{% static 'trap_scorekeeping/js/draw.js' %}" ></script>
 
