--- a/trap_scorekeeping/templates/trap_scorekeeping/user_page.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/user_page.html
@@ -11,6 +11,7 @@
     <link href="{% static 'trap_scorekeeping/css/theme.css' %}" rel="stylesheet">
     <link href="{% static 'trap_scorekeeping/css/index.css' %}" rel="stylesheet">
     <link href="{% static 'trap_scorekeeping/css/user_page.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'trap_scorekeeping/css/asterstyle.css' %}">
   </head>
 
   <body>
@@ -52,7 +53,6 @@
                 <h4>stats:</h4>
                 <li>Longest Streak: {{ longest_streak }} </li>
                 <li> Total Shots: {{ shots }} </li>
-                <li> Hit Percentage: {{ hit_percent }}%</li>
                 <li>Average Score: {{ average_score }}</li>
             </ul>
             <div id="liquidgauge">
@@ -72,7 +72,17 @@
                   config1.waveAnimateTime = 1000;
               </script>
             </div>
+            <div id="aster">
+              <script src="http://d3js.org/d3.v3.min.js"></script>
+              <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+              <script>
+              var csv_data = "{% static 'trap_scorekeeping/' {{ username }} 'aster.csv' %}"
+              </script>
+              <script src="{% static 'trap_scorekeeping/js/draw.js' %}" ></script>
+
+            </div>
       </div>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
