--- a/trap_scorekeeping/static/trap_scorekeeping/css/index.css
+++ b/trap_scorekeeping/static/trap_scorekeeping/css/index.css
@@ -1,25 +1,26 @@
-body {
-  padding-top: 5rem;
-}
-
 .liquidFillGaugeText {
   font-family: Helvetica;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .starter-template {
   padding: 3rem 1.5rem;
-  text-align: left;
 }
-
-h2{
+h1, h2, h4{
   text-align: center;
 }
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 #content {
   display: flex;
   justify-content: space-around;
-  margin-left: 20px;
-  margin-right: 20px;
 }
+
 #lists{
   display: flex;
 }
