--- a/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/score_entry.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" href="{% static 'trap_scorekeeping/favicon-96x96.png' %}">
     <title>Score Entry</title>
     <link href="{% static 'trap_scorekeeping/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'trap_scorekeeping/css/theme.css' %}" rel="stylesheet">
