--- a/trap_scorekeeping/templates/trap_scorekeeping/user_page.html
+++ b/trap_scorekeeping/templates/trap_scorekeeping/user_page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="{% static 'trap_scorekeeping/favicon-96x96.png' %}">
+    <link rel="icon" href="{% static 'trap_scorekeeping/images/favicon-96x96.png' %}">
     <title>{{ username }}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="{% static 'trap_scorekeeping/css/user_page.css' %}" rel="stylesheet">
@@ -60,13 +60,15 @@
 
       </div>
     </div>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-    <script>var csv_data = "{% static 'trap_scorekeeping/stephenaster.csv' %}"</script>
-    <script src="{% static 'trap_scorekeeping/js/draw.js' %}" ></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="{% static 'trap_scorekeeping/js/jquery.min.js' %}"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+    <script>var csv_data = "{% url 'csv_request' username %}"</script>
     <script src="{% static 'trap_scorekeeping/js/bootstrap.min.js' %}"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+    <!-- <script type="text/javascript" src="{% static 'trap_scorekeeping/js/csvxfer.js' %}"></script> -->
+    <script src="{% static 'trap_scorekeeping/js/draw.js' %}" ></script>
     </body>
 </html>
